[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caproneisis"
version = "0.1.1"
description = "Industrial-scale CDS/ISIS implementation using Elasticsearch"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Caprazli", email = "caprazli@protonmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "cds-isis",
    "elasticsearch",
    "inverted-index",
    "full-text-search",
    "bibliography",
    "datacite",
    "doi",
    "distributed",
]
dependencies = [
    "elasticsearch>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/capraCoder/caproneisis"
Documentation = "https://github.com/capraCoder/caproneisis#readme"
Repository = "https://github.com/capraCoder/caproneisis"
Issues = "https://github.com/capraCoder/caproneisis/issues"

[project.scripts]
caproneisis = "caproneisis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["caproneisis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
